manifests/media-management/sonarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: media-management
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab
      namespace: envoy-gateway
      #sectionName: https
  hostnames:
    - sonarr.newgamer.lan
  rules:
    - backendRefs:
        - name: sonarr
          port: 8989
